more unit tests added to improve test coverage